# add_executable(threadPoolTest threadPoolTest.cc)
# target_link_libraries(threadPoolTest ${SYSTEM_LIBRARY_OBJ} ${UTIL_OBJ})


# add_executable(ctplTest ctplTest.cc)
# target_link_libraries(ctplTest ${BOOST_LIBRARY_OBJ} ${SYSTEM_LIBRARY_OBJ} ${UTIL_OBJ})


# add_executable(noReturn threadPoolNoReturnTest.cc)
# target_link_libraries(noReturn ${SYSTEM_LIBRARY_OBJ} ${UTIL_OBJ})
